--- a/DM/TPS/TP5.ipynb
+++ b/DM/TPS/TP5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5.1, 3.5, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.9, 3.0, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.7, 3.2, 1.3, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.6, 3.1, 1.5, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.6, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.4, 3.9, 1.7, 0.4, 'Iris-setosa\\n'],\n",
+       " [4.6, 3.4, 1.4, 0.3, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.4, 1.5, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.4, 2.9, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.9, 3.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
+       " [5.4, 3.7, 1.5, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.8, 3.4, 1.6, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.8, 3.0, 1.4, 0.1, 'Iris-setosa\\n'],\n",
+       " [4.3, 3.0, 1.1, 0.1, 'Iris-setosa\\n'],\n",
+       " [5.8, 4.0, 1.2, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.7, 4.4, 1.5, 0.4, 'Iris-setosa\\n'],\n",
+       " [5.4, 3.9, 1.3, 0.4, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.5, 1.4, 0.3, 'Iris-setosa\\n'],\n",
+       " [5.7, 3.8, 1.7, 0.3, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.8, 1.5, 0.3, 'Iris-setosa\\n'],\n",
+       " [5.4, 3.4, 1.7, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.7, 1.5, 0.4, 'Iris-setosa\\n'],\n",
+       " [4.6, 3.6, 1.0, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.3, 1.7, 0.5, 'Iris-setosa\\n'],\n",
+       " [4.8, 3.4, 1.9, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.0, 1.6, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.4, 1.6, 0.4, 'Iris-setosa\\n'],\n",
+       " [5.2, 3.5, 1.5, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.2, 3.4, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.7, 3.2, 1.6, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.8, 3.1, 1.6, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.4, 3.4, 1.5, 0.4, 'Iris-setosa\\n'],\n",
+       " [5.2, 4.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
+       " [5.5, 4.2, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.9, 3.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.2, 1.2, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.5, 3.5, 1.3, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.9, 3.1, 1.5, 0.1, 'Iris-setosa\\n'],\n",
+       " [4.4, 3.0, 1.3, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.4, 1.5, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.5, 1.3, 0.3, 'Iris-setosa\\n'],\n",
+       " [4.5, 2.3, 1.3, 0.3, 'Iris-setosa\\n'],\n",
+       " [4.4, 3.2, 1.3, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.5, 1.6, 0.6, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.8, 1.9, 0.4, 'Iris-setosa\\n'],\n",
+       " [4.8, 3.0, 1.4, 0.3, 'Iris-setosa\\n'],\n",
+       " [5.1, 3.8, 1.6, 0.2, 'Iris-setosa\\n'],\n",
+       " [4.6, 3.2, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.3, 3.7, 1.5, 0.2, 'Iris-setosa\\n'],\n",
+       " [5.0, 3.3, 1.4, 0.2, 'Iris-setosa\\n'],\n",
+       " [7.0, 3.2, 4.7, 1.4, 'Iris-versicolor\\n'],\n",
+       " [6.4, 3.2, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
+       " [6.9, 3.1, 4.9, 1.5, 'Iris-versicolor\\n'],\n",
+       " [5.5, 2.3, 4.0, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.5, 2.8, 4.6, 1.5, 'Iris-versicolor\\n'],\n",
+       " [5.7, 2.8, 4.5, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.3, 3.3, 4.7, 1.6, 'Iris-versicolor\\n'],\n",
+       " [4.9, 2.4, 3.3, 1.0, 'Iris-versicolor\\n'],\n",
+       " [6.6, 2.9, 4.6, 1.3, 'Iris-versicolor\\n'],\n",
+       " [5.2, 2.7, 3.9, 1.4, 'Iris-versicolor\\n'],\n",
+       " [5.0, 2.0, 3.5, 1.0, 'Iris-versicolor\\n'],\n",
+       " [5.9, 3.0, 4.2, 1.5, 'Iris-versicolor\\n'],\n",
+       " [6.0, 2.2, 4.0, 1.0, 'Iris-versicolor\\n'],\n",
+       " [6.1, 2.9, 4.7, 1.4, 'Iris-versicolor\\n'],\n",
+       " [5.6, 2.9, 3.6, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.7, 3.1, 4.4, 1.4, 'Iris-versicolor\\n'],\n",
+       " [5.6, 3.0, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
+       " [5.8, 2.7, 4.1, 1.0, 'Iris-versicolor\\n'],\n",
+       " [6.2, 2.2, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
+       " [5.6, 2.5, 3.9, 1.1, 'Iris-versicolor\\n'],\n",
+       " [5.9, 3.2, 4.8, 1.8, 'Iris-versicolor\\n'],\n",
+       " [6.1, 2.8, 4.0, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.3, 2.5, 4.9, 1.5, 'Iris-versicolor\\n'],\n",
+       " [6.1, 2.8, 4.7, 1.2, 'Iris-versicolor\\n'],\n",
+       " [6.4, 2.9, 4.3, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.6, 3.0, 4.4, 1.4, 'Iris-versicolor\\n'],\n",
+       " [6.8, 2.8, 4.8, 1.4, 'Iris-versicolor\\n'],\n",
+       " [6.7, 3.0, 5.0, 1.7, 'Iris-versicolor\\n'],\n",
+       " [6.0, 2.9, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
+       " [5.7, 2.6, 3.5, 1.0, 'Iris-versicolor\\n'],\n",
+       " [5.5, 2.4, 3.8, 1.1, 'Iris-versicolor\\n'],\n",
+       " [5.5, 2.4, 3.7, 1.0, 'Iris-versicolor\\n'],\n",
+       " [5.8, 2.7, 3.9, 1.2, 'Iris-versicolor\\n'],\n",
+       " [6.0, 2.7, 5.1, 1.6, 'Iris-versicolor\\n'],\n",
+       " [5.4, 3.0, 4.5, 1.5, 'Iris-versicolor\\n'],\n",
+       " [6.0, 3.4, 4.5, 1.6, 'Iris-versicolor\\n'],\n",
+       " [6.7, 3.1, 4.7, 1.5, 'Iris-versicolor\\n'],\n",
+       " [6.3, 2.3, 4.4, 1.3, 'Iris-versicolor\\n'],\n",
+       " [5.6, 3.0, 4.1, 1.3, 'Iris-versicolor\\n'],\n",
+       " [5.5, 2.5, 4.0, 1.3, 'Iris-versicolor\\n'],\n",
+       " [5.5, 2.6, 4.4, 1.2, 'Iris-versicolor\\n'],\n",
+       " [6.1, 3.0, 4.6, 1.4, 'Iris-versicolor\\n'],\n",
+       " [5.8, 2.6, 4.0, 1.2, 'Iris-versicolor\\n'],\n",
+       " [5.0, 2.3, 3.3, 1.0, 'Iris-versicolor\\n'],\n",
+       " [5.6, 2.7, 4.2, 1.3, 'Iris-versicolor\\n'],\n",
+       " [5.7, 3.0, 4.2, 1.2, 'Iris-versicolor\\n'],\n",
+       " [5.7, 2.9, 4.2, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.2, 2.9, 4.3, 1.3, 'Iris-versicolor\\n'],\n",
+       " [5.1, 2.5, 3.0, 1.1, 'Iris-versicolor\\n'],\n",
+       " [5.7, 2.8, 4.1, 1.3, 'Iris-versicolor\\n'],\n",
+       " [6.3, 3.3, 6.0, 2.5, 'Iris-virginica\\n'],\n",
+       " [5.8, 2.7, 5.1, 1.9, 'Iris-virginica\\n'],\n",
+       " [7.1, 3.0, 5.9, 2.1, 'Iris-virginica\\n'],\n",
+       " [6.3, 2.9, 5.6, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.5, 3.0, 5.8, 2.2, 'Iris-virginica\\n'],\n",
+       " [7.6, 3.0, 6.6, 2.1, 'Iris-virginica\\n'],\n",
+       " [4.9, 2.5, 4.5, 1.7, 'Iris-virginica\\n'],\n",
+       " [7.3, 2.9, 6.3, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.7, 2.5, 5.8, 1.8, 'Iris-virginica\\n'],\n",
+       " [7.2, 3.6, 6.1, 2.5, 'Iris-virginica\\n'],\n",
+       " [6.5, 3.2, 5.1, 2.0, 'Iris-virginica\\n'],\n",
+       " [6.4, 2.7, 5.3, 1.9, 'Iris-virginica\\n'],\n",
+       " [6.8, 3.0, 5.5, 2.1, 'Iris-virginica\\n'],\n",
+       " [5.7, 2.5, 5.0, 2.0, 'Iris-virginica\\n'],\n",
+       " [5.8, 2.8, 5.1, 2.4, 'Iris-virginica\\n'],\n",
+       " [6.4, 3.2, 5.3, 2.3, 'Iris-virginica\\n'],\n",
+       " [6.5, 3.0, 5.5, 1.8, 'Iris-virginica\\n'],\n",
+       " [7.7, 3.8, 6.7, 2.2, 'Iris-virginica\\n'],\n",
+       " [7.7, 2.6, 6.9, 2.3, 'Iris-virginica\\n'],\n",
+       " [6.0, 2.2, 5.0, 1.5, 'Iris-virginica\\n'],\n",
+       " [6.9, 3.2, 5.7, 2.3, 'Iris-virginica\\n'],\n",
+       " [5.6, 2.8, 4.9, 2.0, 'Iris-virginica\\n'],\n",
+       " [7.7, 2.8, 6.7, 2.0, 'Iris-virginica\\n'],\n",
+       " [6.3, 2.7, 4.9, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.7, 3.3, 5.7, 2.1, 'Iris-virginica\\n'],\n",
+       " [7.2, 3.2, 6.0, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.2, 2.8, 4.8, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.1, 3.0, 4.9, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.4, 2.8, 5.6, 2.1, 'Iris-virginica\\n'],\n",
+       " [7.2, 3.0, 5.8, 1.6, 'Iris-virginica\\n'],\n",
+       " [7.4, 2.8, 6.1, 1.9, 'Iris-virginica\\n'],\n",
+       " [7.9, 3.8, 6.4, 2.0, 'Iris-virginica\\n'],\n",
+       " [6.4, 2.8, 5.6, 2.2, 'Iris-virginica\\n'],\n",
+       " [6.3, 2.8, 5.1, 1.5, 'Iris-virginica\\n'],\n",
+       " [6.1, 2.6, 5.6, 1.4, 'Iris-virginica\\n'],\n",
+       " [7.7, 3.0, 6.1, 2.3, 'Iris-virginica\\n'],\n",
+       " [6.3, 3.4, 5.6, 2.4, 'Iris-virginica\\n'],\n",
+       " [6.4, 3.1, 5.5, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.0, 3.0, 4.8, 1.8, 'Iris-virginica\\n'],\n",
+       " [6.9, 3.1, 5.4, 2.1, 'Iris-virginica\\n'],\n",
+       " [6.7, 3.1, 5.6, 2.4, 'Iris-virginica\\n'],\n",
+       " [6.9, 3.1, 5.1, 2.3, 'Iris-virginica\\n'],\n",
+       " [5.8, 2.7, 5.1, 1.9, 'Iris-virginica\\n'],\n",
+       " [6.8, 3.2, 5.9, 2.3, 'Iris-virginica\\n'],\n",
+       " [6.7, 3.3, 5.7, 2.5, 'Iris-virginica\\n'],\n",
+       " [6.7, 3.0, 5.2, 2.3, 'Iris-virginica\\n'],\n",
+       " [6.3, 2.5, 5.0, 1.9, 'Iris-virginica\\n'],\n",
+       " [6.5, 3.0, 5.2, 2.0, 'Iris-virginica\\n'],\n",
+       " [6.2, 3.4, 5.4, 2.3, 'Iris-virginica\\n'],\n",
+       " [5.9, 3.0, 5.1, 1.8, 'Iris-virginica\\n']]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sepLine(line):\n",
     "    return line.split(\";\")[1:]\n",
@@ -47,12 +207,14 @@
     "f = \"Exo1.csv\"\n",
     "file = open(f,\"r\")\n",
     "\n",
-    "array = getArray(file)"
+    "array = getArray(file)\n",
+    "array = array[1:]\n",
+    "array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,80 +223,127 @@
     "class Knn:\n",
     "    def __init__(self,data):\n",
     "        self.data = data\n",
-    "        \n",
-    "    def manhattan(self,index):\n",
+    "\n",
+    "    def manhattan(self,index=None,data=None):\n",
+    "        if data:\n",
+    "            element = data\n",
+    "        else:\n",
+    "            element = self.data[index]\n",
     "        distances = {}\n",
     "        for i in range(len(self.data)):\n",
     "            somme=0\n",
-    "            for j in range(len(self.data[i])):\n",
-    "                somme += abs(self.data[index][j]-self.data[i][j])\n",
+    "            for j in range(len(self.data[i]) - 1):\n",
+    "                somme += abs(element[j]-self.data[i][j])\n",
     "            distances[i]=somme\n",
     "        return distances\n",
     "    \n",
-    "    def euclidienne(self,index):\n",
+    "    def euclidienne(self,index=None,data=None):\n",
+    "        if data:\n",
+    "            element = data\n",
+    "        else:\n",
+    "            element = self.data[index]\n",
+    "\n",
     "        distances = {}\n",
     "        for i in range(len(self.data)):\n",
     "            somme=0\n",
-    "            for j in range(len(self.data[i])):\n",
-    "                somme += pow(self.data[index][j]-self.data[i][j],2)\n",
+    "            for j in range(len(self.data[i]) - 1):\n",
+    "                somme += pow(element[j]-self.data[i][j],2)\n",
     "            distances[i]=sqrt(somme)\n",
     "        return distances\n",
     "    \n",
-    "    def minkowski(self,index,p):\n",
+    "    def minkowski(self,index=None,p=1,data=None):\n",
+    "        if data:\n",
+    "            element = data\n",
+    "        else:\n",
+    "            element = self.data[index]\n",
+    "\n",
     "        distances = {}\n",
     "        for i in range(len(self.data)):\n",
     "            somme=0\n",
-    "            for j in range(len(self.data[i])):\n",
-    "                somme += pow(abs(self.data[index][j]-self.data[i][j]),p)\n",
+    "            for j in range(len(self.data[i])-1):\n",
+    "                somme += pow(abs(element[j]-self.data[i][j]),p)\n",
     "            distances[i]=pow(somme,1/p)\n",
-    "        return distances\n",
+    "        return distances \n",
     "    \n",
-    "    def cosine(self,index):\n",
+    "    def cosine(self,index=None,data=None):\n",
+    "        if data:\n",
+    "            element = data\n",
+    "        else:\n",
+    "            element = self.data[index]\n",
+    "\n",
     "        distances = {}\n",
     "        for i in range(len(self.data)):\n",
     "            somme=0\n",
-    "            for j in range(len(self.data[i])):\n",
-    "                ab = self.data[i][j] * self.data[index][j]\n",
-    "                a2 = pow(self.data[i][j],2)\n",
-    "                b2 = pow(self.data[index][j])\n",
+    "            ab = 0\n",
+    "            a2 = 0\n",
+    "            b2 = 0\n",
+    "            for j in range(len(self.data[i])-1):\n",
+    "                ab += self.data[i][j] * element[j]\n",
+    "                a2 += pow(self.data[i][j],2)\n",
+    "                b2 += pow(element[j],2)\n",
     "\n",
     "            somme = ab/(sqrt(a2)*sqrt(b2))\n",
     "            distances[i]= 1 - somme\n",
     "        return distances\n",
     "        pass\n",
-    "    def hamming(self,index):\n",
+    "    \n",
+    "    def hamming(self,index=None,data=None):\n",
+    "        if data:\n",
+    "            element = data\n",
+    "        else:\n",
+    "            element = self.data[index]\n",
+    "\n",
     "        distances = {}\n",
     "        for i in range(len(self.data)):\n",
     "            somme=0\n",
-    "            for j in range(len(self.data[i])):\n",
-    "                if self.data[index][j] != self.data[i][j]:\n",
+    "            for j in range(len(self.data[i]) - 1):\n",
+    "                if element[j] != self.data[i][j]:\n",
     "                    somme+=1\n",
     "            distances[i]=somme\n",
     "    \n",
-    "        return distances"
+    "        return distances\n",
+    "\n",
+    "    def getK(self,distances,k):\n",
+    "        return sorted(distances.items(), key=lambda t: t[1])[:k]\n",
+    "    \n",
+    "    def getClass(self,distances):\n",
+    "        classes = {}\n",
+    "        for (i,dist) in distances:\n",
+    "\n",
+    "            if self.data[i][-1] in classes:\n",
+    "                classes[self.data[i][-1]] += 1\n",
+    "            else:\n",
+    "                classes[self.data[i][-1]] = 1\n",
+    "\n",
+    "        return classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\mekki\\Desktop\\TP2\\DM\\TPS\\TP5.ipynb Cell 5\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/DM/TPS/TP5.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m knn \u001b[39m=\u001b[39m Knn(data\u001b[39m=\u001b[39marray)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/DM/TPS/TP5.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m knn\u001b[39m.\u001b[39;49mhamming(\u001b[39m12\u001b[39;49m)\u001b[39m.\u001b[39;49msort()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'sort'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Iris-setosa\\n': 5}"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "knn = Knn(data=array)\n",
     "\n",
-    "knn.hamming(12).sort()"
+    "elem = [5.2, 3.5 , 1.41, 0.25]\n",
+    "\n",
+    "dist = knn.manhattan(data=elem)\n",
+    "\n",
+    "knn.getClass(knn.getK(dist,5))\n"
    ]
   }
  ],
