--- a/TAL/TP6.ipynb
+++ b/TAL/TP6.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyclustering'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\mekki\\Desktop\\TP2\\TAL\\TP6.ipynb Cell 1\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/TAL/TP6.ipynb#X32sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnltk\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstem\u001b[39;00m \u001b[39mimport\u001b[39;00m WordNetLemmatizer\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/TAL/TP6.ipynb#X32sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/TAL/TP6.ipynb#X32sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyclustering\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcluster\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkmeans\u001b[39;00m \u001b[39mimport\u001b[39;00m kmeans, kmeans_visualizer\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/TAL/TP6.ipynb#X32sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyclustering\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcluster\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcenter_initializer\u001b[39;00m \u001b[39mimport\u001b[39;00m kmeans_plusplus_initializer\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mekki/Desktop/TP2/TAL/TP6.ipynb#X32sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyclustering\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m draw_clusters\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyclustering'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "\n",
@@ -32,9 +44,6 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "import pickle\n",
     "\n",
-    "from pyclustering.cluster.kmeans import kmeans, kmeans_visualizer\n",
-    "from pyclustering.cluster.center_initializer import kmeans_plusplus_initializer\n",
-    "from pyclustering.utils import draw_clusters\n",
     "\n",
     "from pyclustering.cluster.clarans import clarans\n",
     "from pyclustering.utils import draw_clusters\n",
@@ -368,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
