"TP4 + update interface"

--- a/RI/TPRI/TP2.ipynb
+++ b/RI/TPRI/TP2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,32 +13,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:20: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:72: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:20: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:72: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_6964\\980288199.py:20: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Z]\\.)+|\\w+|\\.') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_6964\\980288199.py:72: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Z]\\.)+|\\w+|\\.') # \\d : équivalent à [0-9] >>>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 6, 1: 12, 2: 10, 3: 10, 4: 10, 5: 11}\n"
+      "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\2324064935.py:26: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\2324064935.py:77: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\2324064935.py:123: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
     }
    ],
    "source": [
+    "class vect:\n",
+    "    SCALAR = 1\n",
+    "    COSINE = 2\n",
+    "    JACCARD = 3\n",
+    "\n",
     "class Docs:\n",
     "\n",
     "    def __init__(self,Lancaster=True,split=False):\n",
@@ -46,7 +48,8 @@
     "        docs = []\n",
     "        self.maxfreq = {}\n",
     "        MotsVides = nltk.corpus.stopwords.words('english')\n",
-    "\n",
+    "        self.Lancaster = Lancaster\n",
+    "        self.split = split\n",
     "        self.files = [\"TP2data/D1.txt\",\"TP2data/D2.txt\",\"TP2data/D3.txt\",\"TP2data/D4.txt\",\"TP2data/D5.txt\",\"TP2data/D6.txt\"]\n",
     "        file = \"\"\n",
     "        my_dict = {}\n",
@@ -58,7 +61,7 @@
     "                Termes = file.split()\n",
     "            if split:\n",
     "\n",
-    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Z]\\.)+|\\w+|\\.') # \\d : équivalent à [0-9] >>> \n",
+    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
     "                Termes = ExpReg.tokenize(file) \n",
     "\n",
     "\n",
@@ -90,14 +93,14 @@
     "            if self.dict[keys] > self.maxfreq[keys[1]]:\n",
     "                self.maxfreq[keys[1]] = self.dict[keys]\n",
     "\n",
-    "        print(self.maxfreq)\n",
     "        self.N = len(docs)\n",
     "    \n",
     "    def rebuild(self,Lancaster=True,split=False):\n",
     "        docs = []\n",
     "        self.maxfreq = {}\n",
     "        MotsVides = nltk.corpus.stopwords.words('english')\n",
-    "\n",
+    "        self.Lancaster = Lancaster\n",
+    "        self.split = split\n",
     "        \n",
     "        file = \"\"\n",
     "        my_dict = {}\n",
@@ -109,7 +112,7 @@
     "            if not split :\n",
     "                Termes = file.split()\n",
     "            if split:\n",
-    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Z]\\.)+|\\w+|\\.') # \\d : équivalent à [0-9] >>> \n",
+    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
     "                Termes = ExpReg.tokenize(file) \n",
     "\n",
     "\n",
@@ -124,7 +127,7 @@
     "\n",
     "            for term in TermesNormalisation:\n",
     "                \n",
-    "                if (term,i) in my_dict:\n",
+    "                if (term.lower(),i) in my_dict:\n",
     "                    my_dict[(term,i)] += 1\n",
     "                else:\n",
     "                    my_dict[(term,i)] = 1\n",
@@ -143,7 +146,21 @@
     "\n",
     "        self.N = len(docs)\n",
     "        self.DictWeight()\n",
-    "\n",
+    "    def normalize(self,text):\n",
+    "        if self.Lancaster :\n",
+    "            Lancaster = nltk.LancasterStemmer()\n",
+    "            text = Lancaster.stem(text)\n",
+    "        else :\n",
+    "            porter = nltk.PorterStemmer()\n",
+    "            text = porter.stem(text)\n",
+    "        return text\n",
+    "    def splitter(self,text):\n",
+    "        if not self.split:\n",
+    "            return text.split(\" \")\n",
+    "        else:\n",
+    "            ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
+    "            Termes = ExpReg.tokenize(text) \n",
+    "            return Termes\n",
     "    def calcWeight(self,word,doc):\n",
     "\n",
     "        inDocs = []\n",
@@ -170,21 +187,51 @@
     "        return(tf*idf)\n",
     "\n",
     "    def DictWeight(self):\n",
+    "\n",
     "        self.TDFP = [(word,doc,self.dict[(word,doc)],self.calcWeight(word,doc)) for word,doc in self.dict.keys()]\n",
     "        self.DTFP = [(doc,word,freq,weight) for word,doc,freq,weight in self.TDFP]\n",
     "        self.TDFP = sorted(self.TDFP, key=lambda x: x[0])\n",
     "\n",
+    "    def MV(self,termes,typeV = vect.SCALAR):\n",
+    "        rsv = {}\n",
+    "        termes = self.splitter(termes)\n",
+    "        normterms = []\n",
+    "        for term in termes:\n",
+    "            normterms.append(self.normalize(term))\n",
+    "\n",
+    "        for doc in range(self.N):\n",
+    "            QD = 0\n",
+    "            v2 = 0\n",
+    "            w2 = 0\n",
+    "            for term in normterms:\n",
+    "                if (term.lower(),doc) in self.dict.keys():\n",
+    "                    weight = self.calcWeight(term,doc)\n",
+    "                    QD+= weight\n",
+    "                    w2+= math.pow(weight,2)\n",
+    "                    v2+=1\n",
+    "            try:\n",
+    "                if typeV == vect.COSINE:\n",
+    "                    QD = QD / (v2*w2)\n",
+    "                if typeV == vect.JACCARD:\n",
+    "                    QD = QD / (w2+v2 - QD)\n",
+    "            except ZeroDivisionError:\n",
+    "                QD = 0\n",
+    "\n",
+    "\n",
+    "            rsv[doc] = QD\n",
+    "\n",
+    "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
+    "        return rsv\n",
+    "\n",
     "        \n",
     "d = Docs(Lancaster=False,split=True)\n",
     "\n",
-    "d.DictWeight()\n",
-    "\n",
-    "#d.TDFP\n"
+    "d.DictWeight()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -193,15 +240,15 @@
      "text": [
       "Exception in Tkinter callback\n",
       "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\mekki\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
       "    return self.func(*args)\n",
       "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_6964\\469274322.py\", line 37, in on_token_change\n",
+      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\1199361307.py\", line 37, in on_token_change\n",
       "    search()\n",
-      "  File \"C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_6964\\469274322.py\", line 10, in search\n",
+      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\1199361307.py\", line 10, in search\n",
       "    table.delete(*table.get_children())\n",
       "                  ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\mekki\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
+      "  File \"d:\\APPS\\python\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
       "    self.tk.call(self._w, \"children\", item or '') or ())\n",
       "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "_tkinter.TclError: invalid command name \".!frame.!treeview\"\n"
@@ -249,7 +296,20 @@
     "\n",
     "def on_index_change(*args):\n",
     "    search()\n",
+    "def show_match():\n",
+    "    text = query_text.get()\n",
+    "    table.delete(*table.get_children())\n",
     "\n",
+    "    if selected_option.get() == \"SCALAR\":\n",
+    "        rsv = d.MV(text,vect.SCALAR)\n",
+    "    if selected_option.get() == \"COSINE\":\n",
+    "        rsv = d.MV(text,vect.COSINE)\n",
+    "    if selected_option.get() == \"JACCARD\":\n",
+    "        rsv = d.MV(text,vect.JACCARD)\n",
+    "\n",
+    "    for doc in rsv.keys():\n",
+    "        table.insert(\"\", \"end\", values=[doc,\"\",rsv[doc],\"\"])\n",
+    "        \n",
     "# Create the main application window\n",
     "root = tk.Tk()\n",
     "root.title(\"Text Processing Application\")\n",
@@ -315,9 +375,24 @@
     "table_frame.grid_rowconfigure(0, weight=1)\n",
     "table_frame.grid_columnconfigure(0, weight=1)\n",
     "\n",
+    "# Border around \"Processing\" section\n",
+    "Matching_label_frame = ttk.LabelFrame(root, text=\"Matching\")\n",
+    "Matching_label_frame.grid(row=1, column=3, padx=10, pady=10)\n",
+    "\n",
+    "# Create a StringVar to hold the selected option\n",
+    "selected_option = tk.StringVar()\n",
+    "\n",
+    "# Create a Combobox\n",
+    "combo = ttk.Combobox(Matching_label_frame, textvariable=selected_option, state='readonly')\n",
+    "combo['values'] = ('SCALAR','JACCARD', 'COSINE')  # Set the available choices\n",
+    "combo.set('SCALAR')  # Set the default choice\n",
+    "combo.grid(row=0, column=0)\n",
+    "show_matching_button = tk.Button(Matching_label_frame, text=\"Show Matching\", command=show_match)\n",
+    "show_matching_button.grid(row=1, column=0)\n",
     "\n",
     "for dat in d.TDFP:\n",
     "    table.insert(\"\", \"end\", values=[dat[0],dat[1],dat[2],dat[3]])\n",
+    "\n",
     "\n",
     "root.mainloop()"
    ]
