--- a/RI/TPRI/TP4.ipynb
+++ b/RI/TPRI/TP4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -26,11 +26,11 @@
       "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
       "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
       "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7340\\1234238284.py:26: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8396\\2324064935.py:26: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7340\\1234238284.py:77: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8396\\2324064935.py:77: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7340\\1234238284.py:123: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8396\\2324064935.py:123: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
     }
@@ -155,7 +155,7 @@
     "            text = porter.stem(text)\n",
     "        return text\n",
     "    def splitter(self,text):\n",
-    "        if self.split:\n",
+    "        if not self.split:\n",
     "            return text.split(\" \")\n",
     "        else:\n",
     "            ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
@@ -209,7 +209,6 @@
     "                    QD+= weight\n",
     "                    w2+= math.pow(weight,2)\n",
     "                    v2+=1\n",
-    "            print(w2,v2)\n",
     "            try:\n",
     "                if typeV == vect.COSINE:\n",
     "                    QD = QD / (v2*w2)\n",
@@ -218,8 +217,10 @@
     "            except ZeroDivisionError:\n",
     "                QD = 0\n",
     "\n",
+    "\n",
     "            rsv[doc] = QD\n",
-    "            \n",
+    "\n",
+    "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
     "        return rsv\n",
     "\n",
     "        \n",
@@ -230,33 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0\n",
-      "0.08977205194893534 1\n",
-      "0.01896306064961095 2\n",
-      "0.10158604251801275 2\n",
-      "0.08137635711861467 2\n",
-      "0.009111059267549354 2\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{0: 0,\n",
-       " 1: 0.3791925699343096,\n",
-       " 2: 0.09677848750518504,\n",
+       "{1: 0.3791925699343096,\n",
        " 3: 0.22471246845697213,\n",
        " 4: 0.20460462614032912,\n",
-       " 5: 0.07181190846697223}"
+       " 2: 0.09677848750518504,\n",
+       " 5: 0.07181190846697223,\n",
+       " 0: 0}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
